--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
     padding: 0;
     font-family: Nunito, sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    transition: all .3s ease;
 }
+body {
+    background-color: rgb(19, 18, 18);
+}
+
 .container {
     height: 100vh;
-    background-color: rgb(19, 18, 18);
 }
 
 
@@ -40,21 +45,21 @@
         filter: brightness(0) invert(1);
     }
 
-    .hero-container {
-        margin: 0px auto;
+    /* .hero-container {
+        margin: 0px auto; 
         width: 94%;
-    }
+    } */
 
     .hero-wallpaper {
         background-image: url('assests/momo-picture.jpg');
-        height: 340px;
+        height: 240px;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         background-position: fixed;
-        border-radius: 1rem;
+        /* border-radius: 1rem; */
         opacity: .8;
-        padding: 16px;
+        padding: 0px 16px;
         display: flex;
         justify-self: center;
         align-items: center;
@@ -63,7 +68,7 @@
     .hero-container p {
         color: white;
         z-index: 2;
-        font-size: 1.2rem;
+        font-size: 1rem;
         background-color: rgba(0,0,0,0.5);
         padding: 24px;
         border-radius: 1.1rem;
@@ -71,9 +76,47 @@
     .hero-container span {
         color: #FF8000;
         font-weight: bolder;
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-bottom: 12px;
         display: inline-block;
         text-transform: uppercase;
+    }
+
+    .food-section {
+        height: 100vh;
+        background-color: whitesmoke;
+        border-top-left-radius: 1.6rem;
+        border-top-right-radius: 1.6rem;
+        transform: translateY(-2%);
+    }
+    .food-items {
+        height: 160px;
+        background-color: rgba(211, 211, 211, 0.76);
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 12px;
+        border-radius: 1rem;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .food-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .food-image img {
+        height: 80px;
+        width: 80px;
+        border-radius: 1rem;
+    }
+    .food-details {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .food-details div p {
+        font-weight: 800;
     }
 }
