--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: Nunito, sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    scroll-snap-type: mandatory;
     transition: all .3s ease;
 }
 body {
@@ -22,6 +23,37 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+    .popup-nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: orange;
+        z-index: 2;
+        /* height: 20vh; */
+        padding: 20px;
+        width: 100%;
+        background-color: rgb(19, 18, 18);
+        border-bottom-right-radius: 1.2rem;
+        border-bottom-left-radius: 1.2rem;
+        display: none;
+    }
+
+    .popup-nav ul li a {
+        display: block;
+        color: white;
+        text-decoration: none;
+        font-weight: 600;
+        margin: 20px 0;
+    }
+
+    .popup-nav ul {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        font-size: 1.8rem;
+        justify-content: center;
+        align-items: center;
     }
     
     .logo-container span {
@@ -43,6 +75,7 @@ body {
     .hamburger-menu img {
         height: 32px;
         filter: brightness(0) invert(1);
+        z-index: 999;
     }
 
     /* .hero-container {
@@ -67,7 +100,6 @@ body {
 
     .hero-container p {
         color: white;
-        z-index: 2;
         font-size: 1rem;
         background-color: rgba(0,0,0,0.5);
         padding: 24px;
@@ -83,14 +115,23 @@ body {
     }
 
     .food-section {
-        height: 100vh;
+        /* height: 100vh; */
         background-color: whitesmoke;
         border-top-left-radius: 1.6rem;
         border-top-right-radius: 1.6rem;
         transform: translateY(-2%);
+        padding: 20px 0px;
+    }
+
+    .food-section h2 {
+        margin: 10px 1.3rem;
+        border-bottom: 4px solid #FF8000;
+        display: inline-block;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
     }
     .food-items {
-        height: 160px;
+        /* height: 160px; */
         background-color: rgba(211, 211, 211, 0.76);
         width: 90%;
         margin-left: auto;
@@ -118,5 +159,14 @@ body {
     }
     .food-details div p {
         font-weight: 800;
+    }
+
+    .about-us, .contact-us, .dishes-page {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-align: center;
     }
 }
